# patova

./: .gitignore  CHANGELOG.md  README.md  patova.cabal  patova.toml  shell.nix
app/: LoadToml.hs  Main.hs  Model.hs  ModelWeb.hs  Routes.hs
