cabal-version:      3.0
name:               patova
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             Esteban Podesta
maintainer:         esteban.podesta@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable patova
    import:           warnings
    main-is:          Main.hs
    other-modules: LoadToml Model Routes ModelWeb
    -- other-extensions:
    build-depends:    base <5, tomland, jwt, scotty, http-types, mongoDB, text, aeson, cryptonite, bytestring, containers
    hs-source-dirs:   app
    default-language: Haskell2010
